Make our example an SVG, not SVGZ.
Firefox won't display a local .svgz file, so let's not get cute.

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,5 +1,5 @@
-schema.svgz: schema.dot
-	dot -Tsvgz -oschema.svgz schema.dot
+schema.svg: schema.dot
+	dot -Tsvg -oschema.svg schema.dot
 
 schema.dot: database.sqlite3 ../sqlite-schema-diagram.sql
 	sqlite3 -list database.sqlite3 < ../sqlite-schema-diagram.sql > schema.dot
